cabal-version:      2.4
name:               yahtzee
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:           https://github.com/typed-hole/yahtzee

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Sara Fransson
maintainer:         franssonkai@gmail.com

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files:
    CHANGELOG.md
    README.md

executable yahtzee-server
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Yahtzee.Server

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      , base ^>=4.15.0.0
      , bytestring
      , network

    hs-source-dirs:   server
    default-language: Haskell2010

executable yahtzee-client
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Yahtzee.Client

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.0.0,

    hs-source-dirs:   client
    default-language: Haskell2010

test-suite yahtzee-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.15.0.0
